--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 <body>
-<h1>Conversor y cálculo de IMC</h1>
+
+
+  <div class="container">
+
+  <div class="row">
+
+    <div class="col-8">
+  
+<h1 class="justify-content-center">Conversor</h1>
 <br>
-<h4>Conversor</h4>
+<img src="https://img.freepik.com/vector-gratis/monedas-oro-billetes-icono-estilo-dibujos-animados-3d-pila-monedas-signo-dolar-fajo-dinero-o-efectivo-ilustracion-vector-plano-ahorro-riqueza-economia-finanzas-ganancias-concepto-moneda_74855-25998.jpg?w=2000" alt="" class="img-fluid" width="400px" height="400px">
+
+
+<p>Valor del dolar hoy:</p>
+<input type="number" id="valorDolar">
+<p>Valor del Euro hoy:</p>
+<input type="number" id="valorEuro">
+<p>Valor del Real hoy:</p>
+<input type="number" id="valorReal">
+
+<button class="btn btn-primary" type="submit" onclick="guardarValores()">Guardar</button>
+
 
 <p>Monto en Pesos:</p>
 <select id="selectPesos" class="form-select form-select-sm" aria-label="Default select example">
@@ -20,18 +39,19 @@
     <option value="2">Euro</option>
     <option value="3">Real</option>
   </select>
-<input id="inputPeso" type="number" placeholder="Ingrese el monto">
-<button id="btnPeso">Calcular monto</button>
+<input id="inputPeso" type="number" placeholder="Ingrese el monto en pesos">
+<button id="btnPeso" class="btn btn-primary" onclick="calcularValorPeso()">Calcular monto</button>
 
 <p>Monto en Dolares:</p>
+
 <select id="selectDolares" class="form-select form-select-sm" aria-label="Default select example">
     <option selected>Seleccione la moneda</option>
     <option value="1">Peso</option>
     <option value="2">Euro</option>
     <option value="3">Real</option>
   </select>
-<input id="inputDolar" type="number" placeholder="Ingrese el monto">
-<button id="btnDolar">Calcular monto</button>
+<input id="inputDolar" type="number" placeholder="Ingrese el monto en dolares">
+<button id="btnDolar" class="btn btn-primary" onclick="calcularValorDolar()">Calcular monto</button>
 
 <p>Monto en Euros:</p>
 <select id="selectEuros" class="form-select form-select-sm" aria-label="Default select example">
@@ -40,8 +60,8 @@
     <option value="2">Peso</option>
     <option value="3">Real</option>
   </select>
-<input id="inputEuro" type="number" placeholder="Ingrese el monto">
-<button id="btnEuro">Calcular monto</button>
+<input id="inputEuro" type="number" placeholder="Ingrese el monto en euros">
+<button id="btnEuro"  class="btn btn-primary" onclick="calcularValorEuro()">Calcular monto</button>
 
 <p>Monto en Real:</p>
 <select id="selectReales" class="form-select form-select-sm" aria-label="Default select example">
@@ -50,10 +70,14 @@
     <option value="2">Euro</option>
     <option value="3">Peso</option>
   </select>
-<input id="inputReal" type="number" placeholder="Ingrese el monto">
-<button id="btnReal">Calcular monto</button>
+<input id="inputReal" type="number" placeholder="Ingrese el monto en reales">
+<button id="btnReal" class="btn btn-primary" onclick="calcularValorReal()">Calcular monto</button>
     
+</div>
+</div>
+</div>
 
 <script src="./main.js"></script>    
 </body>
 </html>
+
